Byttet til produksjons-webhook

--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
 
     <script>
         // Configuration
-        const WEBHOOK_URL = 'https://househacker.app.n8n.cloud/webhook-test/chat';
+        const WEBHOOK_URL = 'https://househacker.app.n8n.cloud/webhook/chat';
         const PARTNER_ID = window.location.hostname || 'beregne-no';
         const sessionId = 'session-' + Math.random().toString(36).substr(2, 9);
         
